--- a/scss/blocks/_article.scss
+++ b/scss/blocks/_article.scss
@@ -27,6 +27,10 @@
     text-decoration: none;
     color: #FFFFFF;
     border: 1.5px solid #fff;
+    &:hover {
+        color: #2C2830;
+        background-color: #fff;
+    }
 }
 
 @media only screen and (max-width: 720px) {
