--- a/scss/blocks/_hero-section.scss
+++ b/scss/blocks/_hero-section.scss
@@ -54,6 +54,10 @@
     text-decoration: none;
     color: #FFFFFF;    
     border: 1.5px solid #FFFFFF;
+    &:hover {
+        color: #2C2830;
+        background-color: #fff;
+    }
 }
 .hero-section__img1 {
     position: absolute;
